fixed text alignment bug

--- a/css/main.css
+++ b/css/main.css
@@ -163,6 +163,8 @@ body {
   text-align: left;
   line-height: 30px;
   color: #7b7b7b;
+    text-align: justify;
+  text-justify: inter-word;
 }
 
 /* line 163, scss/main.scss */
